Feat: add id and secret from google

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_CLIENT_ID= 
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=363430174218-66hh6m6tgueamlun3ngffjudsn70qpus.apps.googleusercontent.com 
+GOOGLE_CLIENT_SECRET=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
